test: Purchase tests